--- a/css/main.css
+++ b/css/main.css
@@ -978,4 +978,11 @@ input:focus {
     display: flex;
     flex-direction: column;
   }
+
+  .tag-link {
+    white-space: pre-wrap;
+    white-space: pre-line;
+    word-wrap: break-word;
+    word-break: break-all;
+  }
 }
