--- a/css/main.css
+++ b/css/main.css
@@ -261,9 +261,10 @@ input:focus {
   background-color: transparent;
   background-image: url('../assets/logo.png');
   background-position: 50% 50%;
-  background-size: cover;
-  height: 868px;
+  background-size: contain;
+  background-repeat: no-repeat;
   width: 100%;
+  height: 80vh;
   z-index: 99;
 }
 
@@ -580,8 +581,7 @@ input:focus {
   line-height: 38.4px;
   margin-top: -1.00px;
   position: relative;
-  text-align: center;
-  width: fit-content;
+  text-align: left;
 }
 
 .container-center-content .max-supply100-t-wuf-8hn9iu {
@@ -881,18 +881,22 @@ input:focus {
 }
 
 .header-screen {
+  width: 100%;
   position: relative;
-  width: 1420px;
+  display: flex;
+  justify-content: center;
 }
 
 .header-screen-bg {
-  position: absolute;
   background-color: transparent;
   background-image: url(https://cdn.animaapp.com/projects/64df22578bd173e193424f36/releases/661363fed3ad572583626494/img/div-lp-pom-block-11.png);
   background-position: 50% 50%;
   background-size: cover;
   height: 868px;
   width: 100%;
+  display: flex;
+  justify-content: center;
+  padding: 32px;
 }
 
 .text-logo {
@@ -926,7 +930,132 @@ input:focus {
   gap: 64px;
 }
 
+@media screen and (max-width: 1280px) {
+  /* Styles for phones */
+  .header-screen {
+   width: 100%;
+ }
+
+ .div-header-section-text {
+   width: 100%;
+   text-align: center;
+ }
+
+ .text-logo {
+   width: 80%;
+   display: flex;
+   justify-content: center;
+   align-items: center;
+ }
+
+ .logo-wuffi-wordmark {
+   width: 320px;
+ }
+ 
+ .text-description {
+   width: 80%;
+ }
+
+ .div-header-section {
+   width: 100%;
+   display: flex;
+   flex-direction: column-reverse;
+   justify-content: center;
+   align-items: center;
+ }
+
+ .wuffi-token {
+   width: 50vw;
+   height: 50vw;
+ }
+
+ .container-center-content {
+   width: 100%;
+   padding: 32px;
+ }
+
+ .strong-bark-your-calendars-for-2024-OlwM73 {
+   text-align: center;
+ }
+
+ .text-link {
+   width: 100%;
+   display: flex;
+   flex-direction: column;
+ }
+
+ .tag-link {
+   display: flex;
+   white-space: pre-wrap;
+   white-space: pre-line;
+   word-wrap: break-word;
+   word-break: break-all;
+ }
+ /* Styles for tablets */
+}
+
+
 @media screen and (max-width: 768px) {
+   /* Styles for phones */
+   .header-screen {
+    width: 100%;
+  }
+
+  .div-header-section-text {
+    width: 100%;
+    text-align: center;
+  }
+
+  .text-logo {
+    width: 80%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .logo-wuffi-wordmark {
+    width: 320px;
+  }
+  
+  .text-description {
+    width: 80%;
+  }
+
+  .div-header-section {
+    width: 100%;
+    display: flex;
+    flex-direction: column-reverse;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .wuffi-token {
+    width: 70vw;
+    height: 70vw;
+  }
+
+  .container-center-content {
+    width: 100%;
+    padding: 32px;
+  }
+
+  .strong-bark-your-calendars-for-2024-OlwM73 {
+    text-align: center;
+  }
+
+  .text-link {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+  }
+
+  .tag-link {
+    display: flex;
+    white-space: pre-wrap;
+    white-space: pre-line;
+    word-wrap: break-word;
+    word-break: break-all;
+  }
   /* Styles for tablets */
 }
 
@@ -943,6 +1072,9 @@ input:focus {
 
   .text-logo {
     width: 80%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
 
   .logo-wuffi-wordmark {
