--- a/css/main.css
+++ b/css/main.css
@@ -264,7 +264,7 @@ input:focus {
   background-size: contain;
   background-repeat: no-repeat;
   width: 100%;
-  height: 60vh;
+  height: 640px;
   z-index: 99;
 }
 
@@ -931,6 +931,11 @@ input:focus {
 }
 
 @media screen and (max-width: 1280px) {
+
+  .header-screen-bg {
+    height: 868px;
+  }
+
   /* Styles for phones */
   .header-screen {
    width: 100%;
@@ -994,8 +999,11 @@ input:focus {
  /* Styles for tablets */
 }
 
-
 @media screen and (max-width: 768px) {
+  .header-screen-bg {
+    height: 768px;
+  }
+
    /* Styles for phones */
    .header-screen {
     width: 100%;
@@ -1060,6 +1068,10 @@ input:focus {
 }
 
 @media screen and (max-width: 576px) {
+  .header-screen-bg {
+    height: 640px;
+  }
+
   /* Styles for phones */
   .header-screen {
     width: 100%;
